# bevy_fabulous

./: .gitignore  Cargo.toml  Readme.md
assets/: earthminion.glb
examples/: example.rs  prefab.rs
src/: lib.rs  materials.rs  postfab.rs  prefab.rs  prelude.rs
