[package]
name = "bevy_fabulous"
version = "0.1.1"
edition = "2021"
authors = ["Cayle Bray"]
description = "A Bevy plugin for enriching spawned GLTF scenes with gameplay components / assets"
keywords = ["bevy", "3D", "GLTF", "gamedev"]
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/bevy_fabulous"
readme = "README.md"
repository = "https://github.com/BraymatterOrg/bevy_fabulous"
homepage = "https://github.com/BraymatterOrg/bevy_fabulous"

[[example]]
name="example"

[lib]
name = "bevy_fabulous"
path = "src/lib.rs"

[dependencies]
bevy="0.14"